# playastation

./: .gitignore  Cargo.toml  ai_gen_tests.asm  flake.nix
src/: interconnect.rs  lib.rs  main.rs
src/cpu/: cop0.rs  ins.rs  mod.rs  pipeline.rs
src/cpu/jit/: decoder.rs  mod.rs
src/cpu/jit/compiler/: codegen.rs  mod.rs  stubs.rs  tests.rs
src/cpu/pipeline/: ins.rs  mod.rs  ops.rs
src/cpu/run/: interpreter.rs  mod.rs
src/devices/: dma.rs  gpu.rs  int.rs  mod.rs  timer.rs
src/devices/dma/: handler.rs  mod.rs
src/devices/gpu/: cmd.rs  gp0.rs  gp1.rs  handler.rs  mod.rs  types.rs
src/dma/: mod.rs
src/interconnect/: mmio.rs  mod.rs
src/mem/: mod.rs
src/run/: decoder.rs  interpreter.rs  mod.rs
src/run/jit/: codegen.rs  mod.rs  stubs.rs  tests.rs
src/run/jit/compiler/: codegen.rs  mod.rs  stubs.rs  tests.rs
tests/: bios.rs  bus.rs  cpu.rs
tests/asm/: alu_basic.s  alu_to_branch_dep.s  branch_backward_loop.s  branch_not_taken.s  branch_taken_delay_slot.s  break_exception.s  delay_slot_exception_bd.s  div_by_zero.s  div_normal.s  jal_jr_return.s  jump_delay_slot.s  load_use_hazard.s  mem_basic.asm  mem_offset_signed.s  mfc0_basic.s  misaligned_lw_exception.s  misaligned_sw_exception.s  mtc0_basic.s  overflow_exception.s  reserved_instruction_exception.s  shift_basic.s  syscall_exception.s
