[package]
name = "playastation"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
strum = { version = "0.28.0", features = ["derive"] }
bitflags = "2.11.0"
modular-bitfield = "0.13.1"

cranelift = { version = "0.130", features = ["module", "jit"], optional = true }

[features]
default = []
jit = ["dep:cranelift"]
