[package]
name = "playastation"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
# TODO : remove
tracing-subscriber = "0.3.23"

strum = { version = "0.28.0", features = ["derive"] }
bitflags = "2.11.0"
modular-bitfield = "0.13.1"

smallvec = "1.15.1"
smallbox = { version = "0.8.8", features = ["coerce"] }

cranelift = { version = "0.130", features = ["module", "jit"], optional = true }

[features]
default = []
jit = ["dep:cranelift"]
